Package: aroma.core
===================

Version: 1.3.7 [2010-01-01]
o Added argument 'pattern' to byName() for AromaUnitTotalCnBinarySet
  and AromaUnitFracBCnBinarySet.
o getSets() of AromaMicroarrayDataSetTuple overrides the default method
  by adding the chip types as the names of the returns list.
o CLEAN UP: Removed getSetTuple() from ChromosomeExplorer.
o ROBUSTNESS: Now CopyNumberChromosomalModel() asserts that none of the
  test samples have duplicated names.
o ROBUSTNESS: Now all index arguments are validated correctly 
  using the new 'max' argument of Arguments$getIndices().  Before
  the case where "max == 0" was not handled correctly. 
o BUG FIX: translateFullNames() of ChromosomeExplorer would translate the
  full names, but return the original ones.
o BUG FIX: getFullNames() of ChromosomeExplorer reported: Error in 
  UseMethod("translateFullNames") : no applicable method for 
  'translateFullNames' applied to an object of class "character".


Version: 1.3.6 [2009-12-08]
o BUG FIX: extractMatrix() of AromaUnitCallFile did not recognize NoCalls.


Version: 1.3.5 [2009-12-02]
o BUG FIX: extractRawCopyNumbers() for RawCopyNumbers would give 
  an error if the internal logBase was NULL.


Version: 1.3.4 [2009-11-24]
o Moved ChromosomeExplorer to aroma.core from aroma.affymetrix.
o Moved several method for 'profileCGH' objects to aroma.core
  from aroma.affymetrix.
o Added extractRawCopyNumbers(, ...logBase=2) to RawCopyNumbers, 
  which can be used to change the logarithmic base of CN ratios, 
  if any.
o Added getAverageFile() for AromaUnitTotalCnBinarySet.
o Now all chromosome plot functions have xScale=1e-6 by default.


Version: 1.3.3 [2009-11-19]
o ALPHA: First successful run of segmentation with CbsModel 
  with AromaUnitTotalCnBinarySet data sets.
o Added isAverageFile() for AromaUnitSignalBinaryFile.
o Added class AromaUnitTotalCnBinarySetTuple.
o GENERALIZATION: Moved CbsModel, GladModel and HaarSegModel