@@ -171,9 +171,8 @@ setMethodS3("importFromGenericTabularFile", "AromaUflFile", function(this, src, 
   # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   nbrOfEnzymes <- nbrOfEnzymes(this);
 
-  if (!inherits(src, "GenericTabularFile")) {
-    throw("Argument 'src' is not an GenericTabularFile: ", class(src)[1]);
-  }
+  # Argument 'src':
+  src <- Arguments$getInstanceOf(src, "GenericTabularFile");
 
   # Argument 'colOrder':
   if (!is.null(colOrder)) {
